# assignment1-basics

./: .gitignore  Makefile  pyproject.toml
cs336_basics/: __init__.py  bootstrap.py  bpe.py  checkpoint.py  data_loader.py  inference.py  nn_model.py  nn_module.py  nn_utils.py  optimizer.py  pretokenization.py  test.py  tokenizer.py  train.py  utils.py
tests/: adapters.py
tests/fixtures/: mytest.txt
